--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 23</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bechlor</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor Of Commerce</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> kushalbhatt003.com</li>
                   
                 </ul>
