--- a/index.html
+++ b/index.html
@@ -74,8 +74,10 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Detail–Oriented Analyst working both individually and collaboratively across various teams in the Back office, Middle office, and operations, to achieve project goals in the OTC market with a passion for the financial market. Focuses on Data-driven work and can work efficiently on different computer applications. 
-            Desire to effectively work with diverse cultures in the global team.
+          <p> believe in power of Data and to use and analyze Data is what drives me in the finance industry.
+            Ever since I learned about coding for data manipulation, I have become obsessed to learn about business intelligence tools, and various programming languages like Python, HTML, SQL.
+            Passionate about Data Analytics, Data Science, Data Mining, NLP, Data visualization.
+            When I am not at work I like reading comics, watching infographics, learning new skills.
             </p>
         </div>
 
