--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p> believe in power of Data and to use and analyze Data is what drives me in the finance industry.
+          <p> I believe in power of Data and to use and analyze Data is what drives me in the finance industry.
             Ever since I learned about coding for data manipulation, I have become obsessed to learn about business intelligence tools, and various programming languages like Python, HTML, SQL.
             Passionate about Data Analytics, Data Science, Data Mining, NLP, Data visualization.
             When I am not at work I like reading comics, watching infographics, learning new skills.
