--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 <li>Financial Analyst Course 2019</li>
                 <li>Research Analyst Certification Examination</li>
                 <li>Investment and Portfolio Management/li>
-                <li>Equity Derivatives</li>
+                <li>Tableau 2020 A-Z: Hands-On Tableau Training for Data Science</li>
 
 
               
