--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 23</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor Of Commerce</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> kushalbhatt003.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> kushalbhatt003@gmail.com</li>
                   
                 </ul>
               </div>
