--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             Ever since I learned about coding for data manipulation, I have become obsessed to learn about business intelligence tools, and various programming languages like Python, HTML, SQL.
             Passionate about Data Analytics, Data Science, Data Mining, NLP, Data visualization.
             When I am not at work I like reading comics, watching infographics, learning new skills.
+            checkout my Tableau vizz <a href="https://public.tableau.com/profile/kushalbhatt#!/">Tableau Public</a>
             </p>
         </div>
 
